# mci

./: README.md  pyproject.toml
.morph/: index.rci
mci.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mci/index/: index.py  morph.py
mci/ir/: IR.py  completions.py  custom_parsers.py  index.mci  index.py  metalanguage.py  missing_docstrings.py  missing_types.py  morph.py  parser.py  parser_core.py  response.py  test_completions.py  test_missing_types.py  test_parser.py  test_response.py
mci/util/: fs.py
